--- a/email-verfication.html
+++ b/email-verfication.html
@@ -25,10 +25,11 @@
       <div class="modal-box">
         <i class="fa-regular fa-circle-check"></i>
         <h2>Completed</h2>
-        <h3>You have sucessfully registered to our server. Thank you!</h3>
+        <h3>You have sucessfully registered to our server. Thank you!</h3><br>
+        <h4>You should be automatically redirected in <span id="seconds">7</span> seconds.</h4>
 
         <div class="buttons">
-          <button id="myButton" href="mainpage.html">Ok, Back to Home</button>
+          <button id="myButton" href="index.html">Ok, Back to Home</button>
           
         </div>
       </div>
@@ -47,7 +48,7 @@
       );
 
       document.getElementById("myButton").onclick = function () {
-        location.href = "mainpage.html";
+        location.href = "index.html";
     };
 
      window.history.forward();
@@ -56,7 +57,18 @@
         window.history.forward();
     }
 
-     
+    var el = document.getElementById('seconds'),
+    total = el.innerHTML,
+    timeinterval = setInterval(function () {
+        total = --total;
+        el.textContent = total;
+        if (total <= 0) {
+            clearInterval(timeinterval);
+            window.location = 'index.html';
+        }
+    }, 1000);
     </script>
+
+
   </body>
 </html>
